--- a/.github/workflows/onpullbuild.yaml
+++ b/.github/workflows/onpullbuild.yaml
@@ -20,6 +20,6 @@ jobs:
           TAG=`git log -1 --pretty=%h`
           echo "${{ secrets.JFROG_DOCKER_PASSWORD}}" | docker login -u "${{ secrets.JFROG_DOCKER_USERNAME}}" --password-stdin  clearmatics-dev-docker.jfrog.io 
           docker build -t autonity-init:$TAG .
-          docker tag autonity-init:$TAG clearmatics-dev-docker.jfrog.io/autonity-init
-          docker push clearmatics-dev-docker.jfrog.io/autonity-init
+          docker tag autonity-init:$TAG clearmatics-dev-docker.jfrog.io/autonity-init:$TAG
+          docker push clearmatics-dev-docker.jfrog.io/autonity-init:$TAG
 
